--- a/dad_2016/css/basics.css
+++ b/dad_2016/css/basics.css
@@ -67,7 +67,7 @@ h3 {
 
 .body {
     height:100%;
-    background: transparent url(/graphics/blue_ball.jpg) no-repeat center center fixed;
+    background: transparent url(../graphics/blue_ball.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
